--- a/component.yaml
+++ b/component.yaml
@@ -43,7 +43,7 @@ inputs:
   defaultValue: "$AC_OUTPUT_DIR/release-notes.txt"
   isRequired: false
   title: Release Notes
-  description: "If you use `Publish Release Notes` component before this step, release-notes.txt will be used as release notes."
+  description: "If you use the `Publish Release Notes` component before this step, release-notes.txt will be used as release notes."
   helpText:
 - key: "AC_APPCENTER_UPLOAD_DSYM"
   defaultValue: "true"
@@ -68,6 +68,18 @@ inputs:
   options: "false,true"
   title: Notify Testers
   description: "Notify testers of this release."
+  helpText:
+- key: "AC_APPCENTER_VERSION"
+  defaultValue: "$AC_APPCENTER_VERSION"
+  isRequired: false
+  title: App Center CLI Version
+  description: "Latest version will be used if no version is set."
+  helpText:
+- key: "AC_APPCENTER_EXTRA"
+  defaultValue: "$AC_APPCENTER_EXTRA"
+  isRequired: false
+  title: Extra arguments
+  description: "Extra command line arguments for appcenter. For example add  --debug for verbose logs."
   helpText:
 outputs:
 processFilename: ruby
